--- a/views/website_photogallery_frontend.xml
+++ b/views/website_photogallery_frontend.xml
@@ -8,7 +8,14 @@
       <div id="wrap">
         <div class="oe_structure" />
         <t t-foreach="photos" t-as="photo">
-           <span t-field="photo.image" t-field-options='{"widget": "image"}'/>
+			<tr>
+				<th>
+					<span t-field="photo.image" t-field-options='{"widget": "image"}'/>
+				</th>
+				<th>
+					<span t-field="photo.image" t-field-options="'{"widget": "text"}'/>
+				</th>
+			</tr>
         </t>
         </div>
         </t>
