--- a/views/website_photogallery_frontend.xml
+++ b/views/website_photogallery_frontend.xml
@@ -10,7 +10,7 @@
         <t t-foreach="photos" t-as="photo">
 			<table>
 			<tr>
-				<td> <span t-field="photo.image" t-field-options='{"widget": "image", "options": ["style":[150,150]]}'/> </td>
+				<td> <span t-field="photo.image" t-field-options='{"widget": "image", "options": "{"style":[150,150]}"}'/> </td>
 				<td align="center" valign="center"> <t t-esc="photo.comments" /> </td>
 			</tr>
 			</table>
