--- a/views/website_photogallery_frontend.xml
+++ b/views/website_photogallery_frontend.xml
@@ -8,10 +8,9 @@
       <div id="wrap">
         <div class="oe_structure" />
         <t t-foreach="photos" t-as="photo">
-			<table>
+			<table style="width:50%">
 			<tr>
 				<td> <span t-field="photo.image" t-field-options='{"widget": "image"}' /> </td>
-				<td> <div t-att-class="img" t-att-src="photo.image" /> </td>
 				<td align="center" valign="center"> <t t-esc="photo.comments" /> </td>
 			</tr>
 			</table>
