--- a/views/website_photogallery_frontend.xml
+++ b/views/website_photogallery_frontend.xml
@@ -12,7 +12,7 @@
 			<table style="width:50%" align="center">
 			<tr>
 				<td style="width:70%"> <span t-field="photo.image" t-field-options='{"widget": "image"}' /> </td>
-				<td style="width:30%; vertical-align:top;" > <u><t t-esc="photo.name"/></u><br></br>  <t t-esc="photo.comments" /> </td>
+				<td style="width:30%; vertical-align:top;" > <u><t t-esc="photo.name"/></u><br></br>  <t t-esc="photo.description" /> </td>
 			</tr>
 			</table>
         </t>
