--- a/views/website_photogallery_frontend.xml
+++ b/views/website_photogallery_frontend.xml
@@ -9,10 +9,11 @@
         <div class="oe_structure" />
 		<br></br>
         <t t-foreach="photos" t-as="photo">
-			<table style="width:50%" align="center">
+			<table style="width:90%" align="center">
 			<tr>
-				<td style="width:70%"> <span t-field="photo.image" t-field-options='{"widget": "image"}' /> </td>
-				<td style="width:30%; vertical-align:top;" > <u><t t-esc="photo.name"/></u><br></br>  <t t-esc="photo.comments" /> </td>
+				<td style="width:60%;padding-bottom:1em;"> <span t-field="photo.image" t-field-options='{"widget": "image"}' /> </td>
+				<td style="width:10%;padding-bottom:1em;"></td>
+				<td style="width:30%; vertical-align:top;;padding-bottom:1em;" > <u><t t-esc="photo.name"/></u><br></br>  <t t-esc="photo.comments" /> </td>
 			</tr>
 			</table>
         </t>
