--- a/views/website_photogallery_frontend.xml
+++ b/views/website_photogallery_frontend.xml
@@ -13,7 +13,7 @@
 			<tr>
 				<td style="width:60%;padding-bottom:1em;"> <span t-field="photo.image" t-field-options='{"widget": "image"}' /> </td>
 				<td style="width:10%;padding-bottom:1em;"></td>
-				<td style="width:30%; vertical-align:top;;padding-bottom:1em;" > <u><t t-esc="photo.name"/></u><br></br>  <t t-esc="photo.comments" /> </td>
+				<td style="width:30%; vertical-align:top;;padding-bottom:1em;" > <u><t t-esc="photo.name"/></u><br></br>  <t t-esc="photo.description" /> </td>
 			</tr>
 			</table>
         </t>
